# factorio-calculator

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: data.rs  main.rs  model.rs  ui.rs
src/data/: data_loader.rs  effects.rs  machines.rs  materials.rs  resources.rs
